WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284808
[TexMap] Incorrect damage information produced for animations with transforms
https://bugs.webkit.org/show_bug.cgi?id=284808
Summary
[TexMap] Incorrect damage information produced for animations with transforms
Pawel Lampe
Reported
2024-12-17 02:53:52 PST
When the transforms are being animated, the damage information is not calculated.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-24 02:54:14 PST
<
rdar://problem/141986222
>
Pawel Lampe
Comment 2
2025-01-21 02:54:44 PST
This issue has been fixed as a side effects of other damage-related changes but mostly the fix for
https://bugs.webkit.org/show_bug.cgi?id=277484
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug