[TexMap][Nicosia] Incorrect damage information produced for animations with transforms https://bugs.webkit.org/show_bug.cgi?id=284808

Reviewed by NOBODY (OOPS!).

WIP

* Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::computeTransformsRecursive):
(WebCore::TextureMapperLayer::prepareTreeForPainting):
(WebCore::TextureMapperLayer::paint):
(WebCore::TextureMapperLayer::collectDamageSelf):
(WebCore::TextureMapperLayer::damageWholeLayerDueToTransformChangeIfNeeded):
(WebCore::TextureMapperLayer::setTransform):
* Source/WebCore/platform/graphics/texmap/TextureMapperLayer.h:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsScene.cpp:
(WebKit::CoordinatedGraphicsScene::paintToCurrentGLContext):
(WebKit::CoordinatedGraphicsScene::updateSceneState):