Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsScene.cpp
@@ -67,24 +67,21 @@ void CoordinatedGraphicsScene::paintToCurrentGLContext(const TransformationMatri
 
     bool sceneHasRunningAnimations = currentRootLayer->applyAnimationsRecursively(MonotonicTime::now());
 
+    currentRootLayer->prepareTreeForPainting(*m_textureMapper);
+
     bool didChangeClipRect = false;
     FloatRoundedRect actualClipRect(clipRect);
 #if ENABLE(DAMAGE_TRACKING)
     if (m_client && m_damagePropagation != Damage::Propagation::None) {
         Damage frameDamage;
-        if (sceneHasRunningAnimations) {
-            // When running animations for now we need to damage the whole frame.
-            frameDamage.add(clipRect);
-        } else {
-            WTFBeginSignpost(this, CollectDamage);
-            currentRootLayer->collectDamage(*m_textureMapper, frameDamage, clipRect.size());
-            WTFEndSignpost(this, CollectDamage);
+        WTFBeginSignpost(this, CollectDamage);
+        currentRootLayer->collectDamage(*m_textureMapper, frameDamage, clipRect.size());
+        WTFEndSignpost(this, CollectDamage);
 
-            if (!frameDamage.isInvalid() && m_damagePropagation == Damage::Propagation::Unified) {
-                Damage boundsDamage;
-                boundsDamage.add(frameDamage.bounds());
-                frameDamage = WTFMove(boundsDamage);
-            }
+        if (!frameDamage.isInvalid() && m_damagePropagation == Damage::Propagation::Unified) {
+            Damage boundsDamage;
+            boundsDamage.add(frameDamage.bounds());
+            frameDamage = WTFMove(boundsDamage);
         }
 
         const auto& damageSinceLastSurfaceUse = m_client->addSurfaceDamage(!frameDamage.isInvalid() && !frameDamage.isEmpty() ? frameDamage : Damage::invalid());
@@ -256,6 +253,11 @@ void CoordinatedGraphicsScene::updateSceneState()
                     [this, &layer, &layersByBacking, &replacedProxiesToInvalidate]
                     (const Nicosia::CompositionLayer::LayerState& layerState)
                     {
+#if ENABLE(DAMAGE_TRACKING)
+                        if (layerState.delta.damageChanged)
+                            layer.setDamage(layerState.damage);
+#endif
+
                         if (layerState.delta.positionChanged)
                             layer.setPosition(layerState.position);
                         if (layerState.delta.anchorPointChanged)
@@ -346,11 +348,6 @@ void CoordinatedGraphicsScene::updateSceneState()
                             layer.setAnimatedBackingStoreClient(layerState.animatedBackingStoreClient.get());
                         else
                             layer.setAnimatedBackingStoreClient(nullptr);
-
-#if ENABLE(DAMAGE_TRACKING)
-                        if (layerState.delta.damageChanged)
-                            layer.setDamage(layerState.damage);
-#endif
                     });
             }
         });
